--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -21,4 +21,12 @@
 .home-container .todo-container h1 {
     font-size: 4rem;
     color: var(--color-accent-2);
+    margin-bottom: 2rem;
+}
+
+.home-container .todo-container form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
