--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -12,21 +12,25 @@
     justify-content: center;
     align-items: center;
     width: 90%;
-    padding: 2rem 10rem;
+    padding: 2rem 5rem;
     max-width: 400px;
-    box-sizing: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
     background-color: var(--color-secondary);
+    border-radius: 3px;
 }
 
 .home-container .todo-container h1 {
+    width: 100%;
+    text-align: center;
     font-size: 4rem;
     color: var(--color-accent-2);
     margin-bottom: 2rem;
+    border-bottom: 2px solid var(--color-accent-2);
 }
 
 .home-container .todo-container form {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
 }
