--- a/web/src/pages/Home/styles.css
+++ b/web/src/pages/Home/styles.css
@@ -1,36 +1,44 @@
 .home-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .home-container .todo-container {
-    margin: 5rem 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    padding: 2rem 5rem;
-    max-width: 400px;
-    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
-    background-color: var(--color-secondary);
-    border-radius: 3px;
+  margin: 5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  padding: 2rem 5rem;
+  max-width: 450px;
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
+  background-color: var(--color-secondary);
+  border-radius: 3px;
 }
 
 .home-container .todo-container h1 {
-    width: 100%;
-    text-align: center;
-    font-size: 4rem;
-    color: var(--color-accent-2);
-    margin-bottom: 2rem;
-    border-bottom: 2px solid var(--color-accent-2);
+  width: 100%;
+  text-align: center;
+  font-size: 4rem;
+  color: var(--color-accent-2);
+  margin-bottom: 2rem;
+  border-bottom: 2px solid var(--color-accent-2);
 }
 
 .home-container .todo-container form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.todo-list-container {
+  margin-top: 1rem;
+  border-radius: 3px;
+  width: 100%;
+  padding: 1rem;
+  background-color: var(--color-accent-3);
 }
